--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -89,6 +89,18 @@
         </li>
       </ol>
 
+
+      <form action="/employee/showList" method="get">
+        　　　　　　　　　　　　　　名前：<input type="text" name="keyword" >
+        <button type="submit">検索</button>
+    </form>
+    
+    
+    
+
+
+
+
       <!-- table -->
       <div class="row">
         <div
